turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:8: error: expected class or object definition
def step() {
^